--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@types/node": "^20.6.0",
     "jest": "^29.6.4",
     "nodemon": "^3.0.1",
+    "prisma": "^5.2.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@prisma/client": "^5.2.0",
     "express": "^4.18.2"
   }
 }
