--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "lib/src/index.js",
   "scripts": {
     "start:dev": "npx nodemon",
-    "prisma": "npx prisma migrate dev --name init && npx prisma db push",
+    "prisma": "npx prisma db push",
     "test": "jest --watch --verbose"
   },
   "repository": {
