--- a/backend/package.json
+++ b/backend/package.json
@@ -32,7 +32,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.2.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
