--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
     "sass": "^1.68.0",
+    "sharp": "^0.32.6",
     "typescript": "5.2.2"
   }
 }
