--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "start:dev": "npx nodemon",
     "prisma": "npx prisma db push",
     "test": "jest --watch --verbose",
-    "start:prod": "npx tsx src/index.ts"
+    "start:prod": "npx tsx src/index.ts",
+    "build": "yarn prisma"
   },
   "repository": {
     "type": "git",
