--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "prisma": "npx prisma db push",
     "test": "jest --watch --verbose",
     "start:prod": "npx tsx src/index.ts",
-    "build": "npx prisma generate  --schema ./prisma/schema.prisma && npm run prisma"
+    "build": ""
   },
   "repository": {
     "type": "git",
