--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "prisma": "npx prisma db push",
     "test": "jest --watch --verbose",
     "start:prod": "npx tsx src/index.ts",
-    "build": ""
+    "build": "npm install && npm run build"
   },
   "repository": {
     "type": "git",
@@ -26,7 +26,6 @@
     "@types/node": "^20.6.0",
     "jest": "^29.6.4",
     "nodemon": "^3.0.1",
-    "prisma": "^5.2.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
@@ -39,6 +38,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "prisma": "^5.3.1"
   }
 }
